# NetFog

./: .gitignore  Cargo.toml  LICENSE  README.md  grafo.py  netfog.pyi  pyproject.toml  test_graph.py
.github/workflows/: publish.yml
docs/: index.md
docs/python/: algorithms.md  creation.md  metrics.md  visualization.md
file_reader/: file_reader.py
file_writer/: file_writer.py
graph/: graph.py
layouts/: layouts.py
src/: lib.rs
src/external_apis/: core.rs  mod.rs  openalex.rs
src/file_reader_core/: file_reader.rs
src/file_writer_core/: file_writer.rs  script.js  template.html
src/graph_core/: graph.rs  node.rs
src/graph_py/: mod.rs  py_graph.rs  py_node.rs
src/layout/: layout.rs  mod.rs  style.rs
src/netfog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/svg_creation/: mod.rs  svg_creation.rs
style/: graph_style.py  line_style.py  marker_style.py  node_style.py
template/: html_writer.py  script.js  svg_writer.py  template.html
tests/: test_algs.rs  test_creation.rs  test_file_readers.rs  test_file_writers.rs  test_metrics.rs
