[package]
name = "netfog"
version = "0.1.1"
edition = "2024"

[lib]
name = "netfog"
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5.1"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
pyo3-stub-gen = "0.13.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
