[package]
name = "netfog"
version = "0.1.2"
edition = "2024"

[lib]
name = "netfog"
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5.1"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
pyo3-stub-gen = "0.13.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
